--- a/doc/UserGuide/ucf.tex
+++ b/doc/UserGuide/ucf.tex
@@ -463,7 +463,7 @@ saves considerable disk space when performing large simulations.
 
 
 %__________________________________
-\section{Boundary conditions}
+\section{Boundary conditions}\label{sec:ucf_bc}
 
 Boundary conditions are specified within the \tt <Grid> \normalfont
 but are described separately for clarity.  The essential idea is that
